[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/CollectableCore.gd" type="Script" id=1]

[node name="CollectableCore" type="Node"]
script = ExtResource( 1 )

[node name="DropNode" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="AreaCollider" type="CollisionShape2D" parent="DropNode"]

[connection signal="area_entered" from="DropNode" to="." method="area_detected"]
[connection signal="body_entered" from="DropNode" to="." method="body_detected"]
